--- a/.env
+++ b/.env
@@ -38,8 +38,6 @@ MESSENGER_TRANSPORT_DSN=doctrine://default
 ###> nelmio/cors-bundle ###
 CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
 ###< nelmio/cors-bundle ###
-# Optional, return the backend version (otherwise only admin will see it)
-EXPOSE_VERSION=false
 
 ###> symfony/lock ###
 # Choose one of the stores below
@@ -53,3 +51,9 @@ OAUTH_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
 OAUTH_PASSPHRASE=changeme
 OAUTH_ENCRYPTION_KEY=change
 ###< league/oauth2-server-bundle ###
+
+# Optional, return the backend version (otherwise only admin will see it)
+EXPOSE_VERSION=false
+
+# Optional, setting a value will force the turnstile validation on register & password forgot pages
+TURNSTILE_SECRET=''
